
  - Allow Tools found on a toolpath to import Python modules from
    their local directory.

  - Have the environment store the toolpath and re-use it to find Tools
    modules during later Copy() or Tool() calls (unless overridden).

  - Normalize the directory path names in SConsignFile() database
    files so the same signature file can interoperate on Windows and
    non-Windows systems.

  From Stanislav Baranov:

  - Make it possible to support with custom Alias (sub-)classes.

  - Allow Builders to take empty source lists when called.

  From Timothee Besset:

  - Add support for Objective C/C++ .m and .mm file suffixes (for
    Mac OS X).

  From Steve Christensen:

  - Handle exceptions from Python functions as build actions.

  - Add a set of canned PathOption validators:  PathExists (the default),
    PathIsFile, PathIsDir and PathIsDirCreate.

  Charles Crain

  - Fix the PharLap linkloc.py module to use target+source arguments
    when calling env.subst().

  From Matthew Doar:

  - Add support for .lex and .yacc file suffixes for Lex and Yacc files.

  From Bjorn Eriksson:

  - Fix an incorrect Command() keyword argument in the man page.

  From Eric Frias:

  - Huge performance improvement:  wrap the tuples representing an
    include path in an object, so that the time it takes to hash the
    path doesn't grow porportionally to the length of the path.

  From Gottfried Ganssauge:

  - Fix SCons on SuSE/AMD-64 Linux by having the wrapper script also
    check for the build engine in the parent directory of the Python
    library directory (/usr/lib64 instead of /usr/lib).

  From Stephen Kennedy:

  - Speed up writing the .sconsign file at the end of a run by only
    calling sync() once at the end, not after every entry.

  From Steven Knight:

  - When compiling with Microsoft Visual Studio, don't include the ATL and
    MFC directories in the default INCLUDE and LIB environment variables.
